Add tests for the SonarQube. Tasks #140, #224, #27, #129, #150, #159, #241, #260, #47, #57, #79