@@ -1,6 +1,7 @@
 package ch.uzh.ifi.hase.soprafs24.config;
 
-import java.util.Arrays;
+import java.util.List;
+
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -8,56 +9,27 @@ import org.springframework.core.Ordered;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 @Configuration
 public class CorsConfig {
 
-    /**
-     * MVC CORS configuration for your REST endpoints.
-     */
     @Bean
-    public WebMvcConfigurer corsConfigurer() {
-        return new WebMvcConfigurer() {
-            @Override
-            public void addCorsMappings(CorsRegistry registry) {
-                registry.addMapping("/**")
-                        .allowedOrigins(
-                            "http://localhost:3000",
-                            "https://sopra-fs25-group-15-client.vercel.app")
-                        .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
-                        .allowedHeaders(
-                            "Authorization",
-                            "Content-Type",
-                            "Access-Control-Allow-Origin")
-                        .exposedHeaders("Authorization")
-                        .allowCredentials(true);
-            }
-        };
-    }
-
-    /**
-     * Global CORS filter for SockJS fallback endpoints under /ws/ paths.
-     * Ensures that /ws/ endpoints like info, xhr_streaming, eventsource, etc.
-     * carry the proper Access-Control-Allow-* headers.
-     */
-    @Bean
-    public FilterRegistrationBean<CorsFilter> sockJsCorsFilter() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList(
+    public FilterRegistrationBean<CorsFilter> globalCorsFilter() {
+        CorsConfiguration cfg = new CorsConfiguration();
+        cfg.setAllowCredentials(true);
+        cfg.setAllowedOrigins(List.of(
             "http://localhost:3000",
             "https://sopra-fs25-group-15-client.vercel.app"
         ));
-        config.addAllowedHeader(CorsConfiguration.ALL);
-        config.addAllowedMethod(CorsConfiguration.ALL);
+        cfg.addAllowedHeader(CorsConfiguration.ALL);
+        cfg.addAllowedMethod(CorsConfiguration.ALL);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/ws/**", config);
+        UrlBasedCorsConfigurationSource src = new UrlBasedCorsConfigurationSource();
+        // apply to every URL—REST and SockJS alike
+        src.registerCorsConfiguration("/", cfg);
 
         FilterRegistrationBean<CorsFilter> bean =
-            new FilterRegistrationBean<>(new CorsFilter(source));
+            new FilterRegistrationBean<>(new CorsFilter(src));
         bean.setOrder(Ordered.HIGHEST_PRECEDENCE);
         return bean;
     }
